@@ -1,3 +1,8 @@
+2006-03-29  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* libstetic/ImageInfo.cs: Don't crash if an icon is not
+	  found in the current theme.
+
 2006-03-22  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* libsteticui/WidgetTreeCombo.cs: A combo that shows the
